--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>core</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 	<build>
 		<plugins>
