--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.datasource.password= postgres
 
 ##railways database config
-spring.datasource.url=jdbc:postgresql://containers-us-west-128.railway.app:7628/railway
+spring.datasource.url=jdbc:postgresql://localhost:5432/binar_air
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
